# embee

./: CMakeLists.txt  README.md
docs/: architecture.md  implementation_plan.md  model_format.md
examples/: chat_cli.cpp
include/embee/: engine.h  model.h  tokenizer.h  types.h
src/: engine.cpp  model.cpp
